Adding locations and fulltext search

--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -15,6 +15,9 @@
       %> 
         <%= item.price %> 
       </li>
+      <li class="shop">
+        <!-- <%= item.shop_name %> --> (<%= item.shop_suburb %>, <%= item.shop_state %>) 
+      </li>
     </ul>
   </div>
 </div>
