adding city, corrected ingestor suburb, fixed tests

--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -16,7 +16,7 @@
         <%= item.price %> 
       </li>
       <li class="shop">
-        <!-- <%= item.shop_name %> --> (<%= item.shop_suburb %>, <%= item.shop_state %>) 
+        <!-- <%= item.shop_name %> --> (<%= item.shop_suburb %>, <%= item.shop_city %>) 
       </li>
     </ul>
   </div>
