--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -7,7 +7,7 @@
     </div>
   </div>
   <div class="description">
-    <p><%=h item.description %></p>
+    <p><!-- <%=h item.description %> --></p>
     <ul>
       <li class="price">
         <%= 
