--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
 
 <div id="header">
   <a href="/"><h1 style="float:left"><span style="color: #ff4fac">Hifi</span><span style="color: #4fa8ff">Buys</span></h1></a>
+  <h1>&nbsp;:&nbsp;Discover Compare Share</h1>
 
   <% if params[:action] != "index" %>
     <% form_tag search_items_path, :method => :get, :style => "float:right" do %>
