--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -1,8 +1,8 @@
-<div class="hreview <%= cycle("even", "odd") %>">
-  <div class="item">
-    <div class="fnsummary">
+<div class="item hproduct <%= cycle("even", "odd") %>">
+  <div class="name">
+    <div class="fn">
       <h3>
-        <%= link_to_tracked(item.name, item.url, options = {}, html_options = {:class => "url", :href => item.url}) %>
+        <%= link_to_tracked(item.name, item.url, options = {}, html_options = {:class => "url", :href => item.url, :rel => "product"}) %>
       </h3>
     </div>
   </div>
