--- a/app/views/items/search.html.erb
+++ b/app/views/items/search.html.erb
@@ -3,7 +3,9 @@
   :as => :item
   %>
 
-<%= will_paginate @items %>
+<div class="hlisting">
+  <%= will_paginate @items %>
+</div>
 
 <% if @items.empty? %>
   Sorry! We don't have anything matching "<%= params[:term] %>".
