--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -10,6 +10,10 @@ h1, h2, h3, h4 {
   margin: 2px;
 }
 
+h1 {
+  color: #666;
+}
+
 body { 
   background: url("/images/topbluefade.gif") repeat-x #fff;
   color: #333; 
@@ -68,7 +72,7 @@ a:hover {
   background-color: #eee;
 }
 
-.hreview {
+.item {
   text-align: left;
   margin: 2px 0px;
   padding: 5px;
@@ -76,12 +80,12 @@ a:hover {
 }
 
 
-.hreview .item {
+.item .name {
   float: left;
   width: 30em;
 }
 
-.hreview .description {
+.item .description {
   float: left;
 }
 
