Adding twitter links

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,3 +1,5 @@
+<h3>Follow us on twitter to <a href="http://twitter.com/twifibuys">get the best hifi deals</a></h3>
+
 <% form_tag search_items_path, :method => :get do %>
   <p><%= text_field_tag :term %></p>
   <p><%= submit_tag 'Search' %></p>
