--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,9 +28,7 @@
 </div>
 
 <div id="footer">
-  <h4>
-    &copy; 2009 HifiBuys Pty Ltd
-  </h4>
+  <h4>Follow us on twitter to<a href="http://twitter.com/twifibuys">get the best hifi deals</a>. &copy; 2009 HifiBuys Pty Ltd</h4>
 </div>
 
 </body>
