--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -9,6 +9,7 @@
     <th>Shop name</th>
     <th>Shop address</th>
     <th>Shop suburb</th>
+    <th>Shop city</th>
     <th>Shop state</th>
     <th>Shop country</th>
   </tr>
@@ -22,6 +23,7 @@
     <td><%=h item.shop_name %></td>
     <td><%=h item.shop_address %></td>
     <td><%=h item.shop_suburb %></td>
+    <td><%=h item.shop_city %></td>
     <td><%=h item.shop_state %></td>
     <td><%=h item.shop_country %></td>
     <td><%= link_to 'Show', item %></td>
