--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -2,7 +2,7 @@
   <div class="name">
     <div class="fn">
       <h3>
-        <%= link_to_tracked(item.name, item.url, options = {}, html_options = {:class => "url", :href => item.url, :rel => "product"}) %>
+        <%= link_to(item.name, item, options = {}, html_options = {:class => "url", :rel => "product"}) %>
       </h3>
     </div>
   </div>
