Removing manufacturer and adding entities instead

--- a/app/views/entities/edit.html.erb
+++ b/app/views/entities/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing manufacturer</h1>
+<h1>Editing entity</h1>
 
-<% form_for(@manufacturer) do |f| %>
+<% form_for(@entity) do |f| %>
   <%= f.error_messages %>
 
   <p>
@@ -12,5 +12,5 @@
   </p>
 <% end %>
 
-<%= link_to 'Show', @manufacturer %> |
-<%= link_to 'Back', manufacturers_path %>
+<%= link_to 'Show', @entity %> |
+<%= link_to 'Back', entities_path %>
