--- a/app/views/entities/new.html.erb
+++ b/app/views/entities/new.html.erb
@@ -1,6 +1,6 @@
-<h1>New manufacturer</h1>
+<h1>New entity</h1>
 
-<% form_for(@manufacturer) do |f| %>
+<% form_for(@entity) do |f| %>
   <%= f.error_messages %>
 
   <p>
@@ -12,4 +12,4 @@
   </p>
 <% end %>
 
-<%= link_to 'Back', manufacturers_path %>
+<%= link_to 'Back', entities_path %>
