Adding some taggy things

--- a/app/views/items/home.html.erb
+++ b/app/views/items/home.html.erb
@@ -4,8 +4,21 @@
   <p><%= text_field_tag :term %></p>
   <p><%= submit_tag 'Search' %></p>
   <br />
-  Search for 
-  <%= link_to "CD Players", search_items_path(:term => "cd player") %>, 
-  <%= link_to "Amplifiers", search_items_path(:term => "amplifier") %>, 
-  <%= link_to "Speakers", search_items_path(:term => "speaker") %>
+
+  <h3>Search for</h3> 
+  <div>
+    <% tag_cloud(@types, %w(css1 css2 css3 css4)) do |tag, css_class| %>
+      <%= link_to tag.name.pluralize, { :action => :search, :term => tag.name }, :class => css_class %>
+    <% end %>
+  </div>
+  <br />
+
+  <h3>Search for hifi from</h3>
+  <div>
+    <% tag_cloud(@manufacturers, %w(css1 css2 css3 css4)) do |tag, css_class| %>
+      <%= link_to tag.name, { :action => :search, :term => tag.name }, :class => css_class %>
+    <% end %>
+  </div>
 <% end %>
+
+
