--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -176,3 +176,18 @@ form {
   list-style: square;
 }
 
+.css1 { 
+  font-size: 0.6em; 
+}
+
+.css2 { 
+  font-size: 0.8em; 
+}
+
+.css3 { 
+  font-size: 1.0em; 
+}
+
+.css4 { 
+  font-size: 1.2em; 
+}
