--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-  <title>HifiBuys</title>
+  <title>HifiBuys <%=  params[:term] || '' %></title>
   <%= stylesheet_link_tag 'default' %>
 </head>
 <body>
