--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
   <title>HifiBuys <%=  params[:term] || '' %></title>
   <%= stylesheet_link_tag 'default' %>
+  <%= formtastic_stylesheet_link_tag %>
 </head>
 <body>
 
@@ -28,6 +29,7 @@
 </div>
 
 <div id="footer">
+  <h4>Found a bargain? Please <%= link_to "tell us about it", :new_ug_item %>!</h4>
   <h4>Follow us on twitter to <a href="http://twitter.com/twifibuys">get the best hifi deals</a>. &copy; 2010 HifiBuys Pty Ltd</h4>
 </div>
 
