--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
+  <meta name="google-site-verification" content="QI82EAMFKAxfWPzw8vNmmhFqJWh-JBmUj_-UbRxoLmc" />
   <title>HifiBuys <%=  params[:term] || '' %></title>
   <%= stylesheet_link_tag 'default' %>
   <%= formtastic_stylesheet_link_tag %>
