Added google feed

--- a/app/views/items/feed.html.erb
+++ b/app/views/items/feed.html.erb
@@ -9,7 +9,7 @@
     <title><%=h item.name %></title>
     <description><%=h item.description %></description>
     <g:price><%=h item.price %></g:price>
-    <link><%=h item.url %></link>
+    <link>http://www.hifibuys.com.au/item/<%=h item.id %></link>
     <g:condition>new</g:condition>
     <g:id><%=h item.id %></g:id>
 </item>
