Fixed search issue and added cucumber tests

--- a/app/views/items/search.html.erb
+++ b/app/views/items/search.html.erb
@@ -1,3 +1,4 @@
+<h2>Results of your search for '<%= params[:term] %>'</h2>
 <%= render :partial => 'item',
   :collection => @items, 
   :as => :item
