--- a/app/views/shared/_ga.html.haml
+++ b/app/views/shared/_ga.html.haml
@@ -1,12 +1,13 @@
 %script{:type => "text/javascript", :charset => "utf-8"}
+
   var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-5045550-6']);
-  _gaq.push(['_setDomainName', '.hifibuys.com.au']);
+  _gaq.push(['_setAccount', 'UA-21904613-1']);
   _gaq.push(['_trackPageview']);
+
   (function() {
-  var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-  ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-  (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(ga);
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
 
 - if flash[:analytics]
