--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,6 +6,7 @@
     = stylesheet_link_tag('reset')
     = stylesheet_link_tag('default')
     = stylesheet_link_tag('omnisocial')
+    = stylesheet_link_tag('jquery-ui')
     = auto_discovery_link_tag(:rss, items_url(:format => 'rss'))
     = javascript_include_tag :defaults
     %title= "HifiBuys #{params[:q]}"
