--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -1,8 +1,18 @@
-%h2 We help you find...
-- unless @items
-  %h2= "Sorry! We don't have anything matching #{params[:q]}."
-- else
-  .items= render @items 
+#items_home
+  %h2
+    Follow us on twitter to 
+    %a{ :href => 'http://twitter.com/twifibuys'}get the best hifi deals
 
-.hlisting= will_paginate @items
+  = search_form_for @q, :method => :get do |f|
+    %p= f.text_field :name_cont
+    %p= f.submit 'Search'
 
+  %h2 Search for products
+  .tags
+    - tag_cloud(@types, %w(css1 css2 css3 css4)) do |tag, css_class|
+      = link_to tag.name.pluralize, items_path(:q => {:name_cont => tag.name}), :class => css_class
+
+  %h2 Search for hifi from
+  .tags
+    - tag_cloud(@manufacturers, %w(css1 css2 css3 css4)) do |tag, css_class|
+      = link_to tag.name.pluralize, items_path(:q => {:name_cont => tag.name}), :class => css_class
