--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,11 +17,11 @@
       %span
         %em Discover Compare Share
 
-- unless controller.action_name == 'home'
+- unless index?
   #search
-    = form_tag search_items_path, :method => :get do
-      = text_field_tag :term, h(params['term'])
-      = submit_tag 'Search'
+    = search_form_for @q do |f|
+      = f.text_field :name_cont
+      = f.submit 'Search'
 
 #nav
   %ul
