--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -1,4 +1,6 @@
 #items_home
-  %h2
+  %h2 Check out some of the great on-sale items we've found!
+  %h5
     Follow us on twitter to 
     %a{ :href => 'http://twitter.com/twifibuys'}get the best hifi deals
+  %ul.thumbnails#items= render Item.where(Item.arel_table[:image_url].not_eq(nil)).sort_by{rand}.slice(0,10)
