--- a/app/views/items/_item.html.haml
+++ b/app/views/items/_item.html.haml
@@ -1,6 +1,6 @@
 %li.thumbnail
   .item
-    =image_tag(item.image_url)
+    =image_tag(item.image_url) if item.image_url
     .caption
       %h5= link_to item.name, item
       %p= "from #{item.seller.name}, #{item.seller.city}"
