--- a/app/views/items/_item.html.haml
+++ b/app/views/items/_item.html.haml
@@ -3,5 +3,5 @@
     =image_tag(item.image_url) if item.image_url
     .caption
       %h5= link_to item.name, item
-      %p= "from #{item.seller.name}, #{item.seller.city}"
+      %p= "from #{item.seller.try(:name)}, #{item.seller.try(:city)}"
       %span.label.label-info.price= item.price
