--- a/app/views/items/_form.html.slim
+++ b/app/views/items/_form.html.slim
@@ -1,19 +1,19 @@
 = form_for @item do |f|
   -if @item.errors.any?
     #error_explanation
-      %h2= "#{pluralize(@item.errors.count, "error")} prohibited this item from being saved:"
-      %ul
+      h2= "# pluralize(@item.errors.count, "error")  prohibited this item from being saved:"
+      ul
         - @item.errors.full_messages.each do |msg|
-          %li= msg
+          li= msg
 
-  %fieldset.left
+  fieldset.left
     .field
       = f.label :name
       = f.text_field :name
     .field
       = f.label :price
       = f.text_field :price
-  %fieldset.right
+  fieldset.right
     .field
       = f.label :description
       = f.text_area :description
